--- a/Web.config
+++ b/Web.config
@@ -8,7 +8,7 @@
 <configuration>
 
   <connectionStrings>
-    <add name="sqlString" connectionString="Data Source=LAPTOP-JO6NHC4C\SQLEXPRESS01;Initial Catalog=Project;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    <add name="sqlString" connectionString="Data Source=LAPTOP-43LFEK72\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   
     <system.web>
