--- a/Web.config
+++ b/Web.config
@@ -13,8 +13,14 @@
   
     <system.web>
       <compilation debug="true" targetFramework="4.5.2" />
-      <httpRuntime targetFramework="4.5.2" />
+      <httpRuntime targetFramework="4.5.2" requestValidationMode="2.0" maxRequestLength="1024000" executionTimeout="600" />
       <customErrors mode="Off" />
     </system.web>
-  
+  <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="70000000" />
+      </requestFiltering>
+    </security>
+  </system.webServer>
 </configuration>
